Signed-off-by: thename151 <thename151@yahoo.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
 *.notrack
+*.notrack.php
 *~
-todos.txt
 dbdets.inc
-dbdets.inc~
 sitename.inc
-grui2/taskscron.php
 grui2/qrcodes
 grui2/qrcodes/qrcodeshere.txt
-tasks/todo/taskshere.txt
-tasks
-README.md~
-.gitignore~
